[package]
name = "turbografx"
version = "0.1.0"
edition = "2024"
description = "A TurboGrafx-16 / PC-Engine emulator written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mre/turbografx"
readme = "README.md"
keywords = ["emulator", "turbografx", "pc-engine", "huc6280", "retro"]
categories = ["emulators"]
# Keep ROMs and screenshots out of the published crate.
# (ROMs are gitignored already, so this is just an additional safety measure.)
exclude = ["roms/**", "assets/**"]

[dependencies]
# The HuC6280 (the CPU in the TurboGrafx-16 / PC Engine) is a 65C02 derivative.
# We depend on the `disassemble-one` branch from mos6502 PR #135, which builds
# on the `Huc6280` variant (MMU mapping registers, relocated zero page/stack,
# remapped BRK vector and the extra opcodes) and additionally provides the
# non-mutating `instruction::disassemble_one` API used by the live debugger.
# https://github.com/mre/mos6502/pull/135
mos6502 = { version = "0.10.1", git = "https://github.com/mre/mos6502", branch = "disassemble-one" }
log = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
macroquad = "0.4"

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
